fix mobile navigation (overflow x-axis) and disable under maintenance links

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -4,6 +4,10 @@
   font-family: "Poppins", sans-serif;
 }
 
+html{
+  box-sizing: border-box;
+}
+
 
 /* ------------------ HEADER SECTION --------------------- */
 
@@ -22,6 +26,7 @@ nav img {
   /* occupy all space in the row */
   flex: 1;
   text-align: right;
+
 }
 
 .nav-links__item {
@@ -34,7 +39,7 @@ nav img {
 .nav-links__item a {
   color: #fff;
   text-decoration: none;
-  font-size: 13px;
+  font-size: 22px;
 }
 
 .nav-links__item a:active,
@@ -106,6 +111,7 @@ nav .fa-solid {
   .text-box h1 {
     font-size: 20px;
   }
+
   .nav-links ul li {
     display: block;
   }
@@ -113,13 +119,14 @@ nav .fa-solid {
     position: absolute;
     background: #f44336;
     height: 100vh;
-    width: 200px;
+    width: 0px;
+    overflow-x: hidden;
     top: 0;
     /* HIDE MENU IN THE BEGINNING */
     right: -200px;
     text-align: left;
     z-index: 2;
-    transition: 1s;
+    transition: 0.75s;
   }
   nav .fa-solid {
     display: block;
@@ -131,6 +138,10 @@ nav .fa-solid {
 
   .nav-links ul {
     padding: 30px;
+  }
+
+  .nav-links__item a{
+    font-size: 18px; 
   }
 }
 
@@ -184,6 +195,7 @@ p {
   padding: 20px 12px;
   box-sizing: border-box;
   transition: 0.5s;
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.239);
 }
 
 h3 {
@@ -313,15 +325,16 @@ h3 {
 }
 
 .testimonial-col {
-  flex-basis: 44%;
+  flex-basis: 42%;
   border-radius: 10px;
   margin-bottom: 5%;
   text-align: left;
   /* // make a box */
-  background: #FFDEAD;
+  background: #FFE6E6;
   padding: 25px;
   cursor: pointer;
   display: flex;
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.239);
 }
 
 .testimonial-col img {
@@ -352,7 +365,10 @@ h3 {
 
 /* <!-- -------------------- uCube Method SECTION -------------------- --> */
 .uCube__Method{
-  background-color: #708090;
+  background:  #F2D1D1;
+  border-radius: 20px;
+  width: 95%; 
+  margin: 0 auto; 
 }
 
 .uCube__Method .uCube__Method-content{
@@ -363,7 +379,7 @@ h3 {
 }
 
 .uCube__Method-content p{
-  color: white;
+  color: rgb(21, 18, 18);
 }
 
 
